--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,3 +7,10 @@
     margin-top: 15px; /* Adjust the margin as needed */
   }
   
+.transition-transform {
+    transition: transform 0.3s ease; /* Transisi rotasi */
+}
+
+.rotate-180 {
+    transform: rotate(180deg); /* Rotasi panah 180 derajat */
+}
